fix line break in header

--- a/client/src/app/coins/_mobile.scss
+++ b/client/src/app/coins/_mobile.scss
@@ -37,7 +37,7 @@
                     }
                 }                
                 .th, .td{
-                    min-width: 80px;
+                    min-width: 90px;
                     height:35px;
                     &.rank{
                         min-width: 0px;
